# OSArborist

./: README.md  meson.build
data/: OSArborist.desktop  OSArborist.metainfo.xml  gschema.xml  meson.build
src/: MainWindow.vala  OSArborist.vala  meson.build
