install_data (
	'OSArborist.desktop',
	install_dir: get_option('datadir') / 'applications',
    rename: meson.project_name() + '.desktop'
)

install_data (
	'OSArborist.metainfo.xml',
	install_dir: get_option('datadir') / 'metainfo',
    rename: meson.project_name() + '.metainfo.xml'
)

install_data (
    'gschema.xml',
    install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
    rename: meson.project_name() + '.gschema.xml'
)
